# ServiceFlow

./: .dockerignore  .editorconfig  .env  .env.docker  .env.example  .evn.local  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  seed.py
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 219ca10c384c_add_phone_number_to_users.py  6fb9668250c5_add_extended_fields_to_request_logs.py  a737bff93d3d_add_public_id_to_service_requests.py  b1a2c3d4e5f6_hash_api_keys.py  c7d8e9f0a1b2_perf_indexes.py  d3e4f5a6b7c8_idempotency_keys.py  e665755dea52_enable_pgcrypto.py  e9f0a1b2c3d4_outbox_events.py  f2787a094c64_remove_phone_number_from_users.py  fd8cd72198dd_init.py
app/: main.py  uow.py
app/core/: config.py  deps.py  enums.py  errors.py  exceptions.py  hashing.py  health.py  idempotency.py  logging.py  metrics.py  middleware.py  rate_limit.py  security.py  tracing.py
app/database/: init_db.py  session.py
app/domain/: __init__.py  request_state_machine.py
app/models/: idempotency.py  outbox.py  request.py  request_log.py  user.py
app/policies/: request_policy.py
app/repositories/: __init__.py  protocols.py  sqlalchemy.py
app/routers/: health.py  requests.py  users.py
app/schemas/: common.py  request.py  user.py
app/services/: request_log_service.py  request_service.py  user_service.py
app/workers/: __init__.py  arq_worker.py
docs/: api.md  frontend-architecture.md  integration-examples.md
docs/adr/: 0001-auth-scheme.md  0002-domain-exceptions-and-rfc7807.md  0003-repository-uow.md  0004-outbox.md  0005-sync-stack-for-now.md  template.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AppShell.tsx  ErrorBoundary.tsx  Sidebar.tsx  StatusBadge.tsx  primitives.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: queries.ts  useLocalStorage.ts
frontend/src/pages/: Dashboard.tsx  MyRequests.tsx  Queue.tsx  Requests.tsx  Users.tsx
frontend/src/services/: api.ts
frontend/src/styles/: global.css
frontend/src/test/: api.test.ts
frontend/src/types/: index.ts
frontend/src/utils/: useAppContext.ts  useLocalStorage.ts
tests/: conftest.py  test_health_and_auth.py  test_user_api.py
tests/contract/: test_openapi_contract.py
tests/integration/: test_health_and_auth.py  test_requests_flow.py  test_user_api.py
tests/unit/: test_hashing.py  test_idempotency.py  test_policies.py  test_request_state_machine.py
