[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "serviceflow"
version = "0.1.0"
requires-python = ">=3.12"

# ==============================================================================
# Pytest
# ==============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
]
markers = [
    "unit: быстрые изолированные тесты без БД",
    "integration: тесты с реальным Postgres (testcontainers)",
    "contract: schemathesis-проверки против OpenAPI",
]
filterwarnings = [
    # Не делаем warning = error: сторонние библиотеки (schemathesis, sqlalchemy,
    # pytest-asyncio, jsonschema) регулярно кидают Deprecation-предупреждения,
    # которые не в нашей власти. Важные варнинги всё равно видны в логе.
    "default",
    "ignore::DeprecationWarning:sqlalchemy.*",
    "ignore::DeprecationWarning:passlib.*",
    "ignore::DeprecationWarning:jsonschema.*",
    "ignore::DeprecationWarning:schemathesis.*",
    "ignore::PendingDeprecationWarning",
]

# ==============================================================================
# Coverage
# ==============================================================================
[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/workers/*",
    "app/database/init_db.py",
    "app/main.py",
    "alembic/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
    "\\.\\.\\.",
]
# Реалистичный порог — чинится добавлением тестов в CI итеративно.
fail_under = 40

# ==============================================================================
# Ruff
# ==============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "B",                # flake8-bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "S",                # security
    "A",                # builtins shadowing
    "RUF",
]
ignore = [
    "S101",   # assert в тестах — ок
    "S104",   # 0.0.0.0 bind — в Docker это норма
    "B008",   # Depends(...) в аргументах — паттерн FastAPI
    "SIM108",
    "RUF001", # кириллица в строках — специально (UI-копирайт на русском)
    "RUF002", # то же в docstring
    "RUF003", # то же в комментариях
    "UP007",  # Union X | Y vs Optional[X] — мы смешиваем, ок для 3.12
    "E501",   # длина строки — форматтер сам разберётся
    "S105",   # hardcoded password false-positive на строковые коды ошибок
    "S106",
    "S108",   # /tmp в тестах — норма
    "S311",   # random в тестах — норма
    "B904",   # raise from — не критично
    "SIM117", # nested with — иногда читаемее
    "SIM102",
    "SIM103",
    "UP035",  # Deprecated typing imports
    "UP006",  # List/Dict vs list/dict — не критично
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B", "E501"]
"alembic/*" = ["E501", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ==============================================================================
# mypy
# ==============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["prometheus_fastapi_instrumentator.*", "slowapi.*", "arq.*"]
ignore_missing_imports = true
